test_fm/_test18.ref
Error: redeclaration of static superclass method 'x' as non-static in '_test18.nj' on line 6