test_fm/_test18.nj
//
// name already used for a static method
//

class Aux extends Main {
  Integer x() {
  }
}

public class Main extends Object {
  static Integer x() {
  }
}
